# web-share

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
deploy/: chat-transfer.service  nginx.conf  remote-upgrade.sh  server-deploy-a-caddy.sh
src/: admin.rs  auth.rs  chat.rs  config.rs  crypto_seal.rs  db.rs  files.rs  main.rs  models.rs  totp.rs
static/: admin.html  index.html  preview-login.html
static/assets/: admin.js  app.css  app.js  preview-login.js
