[package]
name = "chat-transfer"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.11.0"
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
base64 = "0.22.1"
bcrypt = "0.19.2"
bytes = "1.12.1"
chrono = { version = "0.4.45", features = ["serde"] }
cookie = "0.18.1"
dashmap = "6.2.1"
data-encoding = "2.11.0"
dotenvy = "0.15.7"
futures-util = "0.3.32"
hex = "0.4.3"
hmac = "0.13.0"
mime_guess = "2.0.5"
qrcode = { version = "0.14.1", features = ["svg"] }
rand = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.11.0"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "chrono"] }
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.53.0", features = ["full"] }
tokio-stream = "0.1.18"
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["fs", "trace", "limit", "set-header"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.24.0", features = ["v4", "serde"] }
